# mt3620-g-shield

./: LICENSE.txt  README.ja.md  README.md
media/: 2.pptx
samples/accel-16g/: .gitignore  CMakeLists.txt  app_manifest.json  main.c
samples/buzzer/: CMakeLists.txt  app_manifest.json  main.c
samples/gps/: CMakeLists.txt  app_manifest.json  main.c
samples/rotary-angle/: CMakeLists.txt  app_manifest.json  main.c
